# basecrawl

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  image.yml  publish.yml
bindings/c/: CMakeLists.txt  example.c
bindings/c/tests/: assert_parity.cmake
bindings/node/: README.md  package.json
bindings/node/tests/: cross-binding-parity.test.js  linux-publish-honesty.test.js  package-consumer.test.js
bindings/python/tests/: test_cross_binding_parity.py
crates/basecrawl-core/: Cargo.toml
crates/basecrawl-core/src/: attestation.rs  canonical.rs  captcha_solver.rs  charset.rs  content.rs  document.rs  egress.rs  error.rs  fetch.rs  html.rs  lib.rs  markdown.rs  metadata.rs  proxy.rs  robots.rs  rtt_echo.rs  screenshot.rs  stealth.rs
crates/basecrawl-core/tests/: advanced_nav.rs  aggregate_render_resource_budgets.rs  attestation_quote.rs  canonicalization.rs  captcha_solver_provider.rs  cdp_stealth_depth.rs  charset_i18n.rs  cli.rs  cross_stealth_integrity.rs  deadline_budget.rs  document_extraction.rs  egress_redaction.rs  enclave_attested_rtt_echo.rs  fingerprint_depth.rs  fingerprint_security_invariants.rs  html_rawhtml.rs  http_fetch.rs  js_render.rs  links.rs  live_residual_smoke.rs  markdown.rs  metadata.rs  non_html_content_types.rs  open_web_smoke.rs  origin_scoped_request_context.rs  oxy_residential_connect.rs  politeness_cookieauth_resource_caps.rs  product_breadth.rs  proxy_live_oxylabs.rs  proxy_sticky_country_class.rs  redirects.rs  request_header_canonicalization.rs  robots_sitemap.rs  screenshot.rs  seeded_fingerprint.rs  soft_tls_impersonate.rs  stealth_identity.rs  tls_capture.rs  unlock_challenge_honesty.rs
crates/basecrawl-core/tests/common/: mod.rs
crates/basecrawl-ffi/src/: lib.rs
crates/basecrawl-fp/: Cargo.toml
crates/basecrawl-fp/src/: lib.rs  security.rs  tls_impersonate.rs
crates/basecrawl-headless-chrome/: Cargo.toml
crates/basecrawl-headless-chrome/src/browser/: process.rs
crates/basecrawl-proof/schema/: scrapeproof.schema.json
crates/basecrawl-proof/src/: lib.rs
crates/basecrawl-render/: Cargo.toml
crates/basecrawl-render/examples/: socks_launch_probe.rs
crates/basecrawl-render/src/: lib.rs
crates/basecrawl-render/tests/: browser_dns_isolation.rs
crates/basecrawl-seal/src/: antibot_feedback.rs  browser_dns.rs  lib.rs
crates/basecrawl-seal/tests/: browser_dns_isolation.rs  key_release_and_decrypt.rs
docs/: SECURITY.md  TRUST_MODEL.md  architecture.md  tcb-inventory.md
docs/operators/: proxy-and-egress.md
image/: Dockerfile  allowlist.json  attest.py  buildkit_provenance.py  docker-compose.yml  live-quote-evidence.json  measurement-reconciliation.json  measurement_allowlist.py  phala-app-compose.json  replay_rtmr3.py  reproducibility.py  tier2-attestation-evidence.json  verify_tier2.py
image/evidence/m10/: assertions_summary.json  auth_verdicts.json  cleanup.json  cross020.json  cross021.json  cvms-list-final.json  decode_a.json  decode_b.json  decode_getquote.json  delete.json  dstack-mr-tdx-small.json  event_log.json  get_weights_sim.json  getquote_probe.json  info.json  info_event_log.json  manifest.json  mission-cvm.json  pck_b.json  proof_a.json  proof_a_raw.json  proof_a_unsigned.json  proof_b.json  proof_b_raw.json  proof_b_unsigned.json  quote_a.hex  quote_b.hex  quote_getquote.hex  raw-logs.txt  validator-allowlist.json  verify_a.json  verify_b.json  verify_getquote.json
image/evidence/m2/: manifest.json
image/evidence/m2/catalog/: digest.txt  metadata.json  release-files.json  release.json  sha256sum.txt
image/evidence/m2/cleanup/: final-inventory.json
image/evidence/m2/compose/: phala-app-compose.json
image/evidence/m2/deployments/first/: attestation.json  deployment.json  event-log.json  info.json  quote.hex
image/evidence/m2/deployments/second/: attestation.json  deployment.json  event-log.json  info.json  quote.hex
image/evidence/m2/execution/: reconciliation.json
image/evidence/m2/measurement/: dstack-mr-invocation.json  dstack-mr-output.json
image/tests/: test_attest.py  test_buildkit_provenance.py  test_measurement_allowlist.py  test_quote_integrity.py  test_reproducibility.py  test_verify_tier2.py
scripts/: publish-crates-helpers.sh
scripts/tests/: test_publish_crates_helpers.sh
tools/benchmark/: FORMATS.md  MATRIX.md  README.md  SCHEMA.md  SCORING.md  pyproject.toml
tools/benchmark/benchmark/: __init__.py  __main__.py  basecrawl_adapter.py  cli.py  firecrawl_adapter.py  firecrawl_limit.py  formats.py  hard_matrix.py  matrix.py  redact.py  rescore.py  residential_limit.py  schema.py  scorer.py
tools/benchmark/fixtures/artifacts/: credential-error-fast.json  empty-markdown-links.json  interstitial-false-success.json  js-target-empty-shell.json  js-target-rendered.json  soft-basecrawl-example.json  soft-firecrawl-example.json  taostats-basecrawl-hard-detect.json  taostats-fc-basic-sandwich.json  taostats-fc-enhanced-sandwich.json
tools/benchmark/tests/: test_basecrawl_adapter.py  test_cli.py  test_firecrawl_adapter.py  test_hard_matrix.py  test_hard_sandwich_scorer.py  test_matrix.py  test_rescore.py  test_schema.py  test_scorer.py
