[workspace]
resolver = "2"
members = [
    "crates/basecrawl-core",
    "crates/basecrawl-proof",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "deflate", "brotli"] }
sha2 = "0.10"
thiserror = "2"

[profile.release]
opt-level = 3
