[workspace]
resolver = "2"
members = [
    "crates/basecrawl-core",
    "crates/basecrawl-proof",
    "crates/basecrawl-render",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "deflate", "brotli"] }
sha2 = "0.10"
thiserror = "2"
scraper = "0.27"
ego-tree = "0.11"
headless_chrome = "1"
base64 = "0.22"
png = "0.17"

[profile.release]
opt-level = 3
