[workspace]
resolver = "2"
members = [
    "crates/basecrawl-core",
    "crates/basecrawl-proof",
    "crates/basecrawl-render",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "deflate", "brotli"] }
rustls = { version = "0.23.41", default-features = false, features = ["std", "ring"] }
webpki-roots = "1.0.8"
httparse = "1.10"
flate2 = "1.1"
brotli = "8.0"
x509-parser = "0.18"
sha2 = "0.10"
thiserror = "2"
scraper = "0.27"
ego-tree = "0.11"
headless_chrome = "1"
base64 = "0.22"
png = "0.17"
encoding_rs = "0.8"
getrandom = "0.3"
time = { version = "0.3", features = ["formatting", "parsing"] }
quick-xml = "0.39"
pdf-extract = "0.12"
zip = { version = "7.2", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[profile.release]
opt-level = 3
