[package]
name = "basecrawl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "basecrawl crawler core: URL/format validation, fetch, and ScrapeProof assembly"

[lib]
name = "basecrawl_core"
path = "src/lib.rs"

[[bin]]
name = "basecrawl"
path = "src/bin/basecrawl.rs"

[dependencies]
basecrawl-proof = { path = "../basecrawl-proof" }
basecrawl-render = { path = "../basecrawl-render" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
url.workspace = true
reqwest.workspace = true
sha2.workspace = true
thiserror.workspace = true
scraper.workspace = true
ego-tree.workspace = true
base64.workspace = true

[dev-dependencies]
png.workspace = true
base64.workspace = true
