[package]
name = "basecrawl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "basecrawl crawler core: URL/format validation, fetch, and ScrapeProof assembly"

[lib]
name = "basecrawl_core"
path = "src/lib.rs"

[[bin]]
name = "basecrawl"
path = "src/bin/basecrawl.rs"

[dependencies]
basecrawl-proof = { path = "../basecrawl-proof" }
basecrawl-render = { path = "../basecrawl-render" }
basecrawl-seal = { path = "../basecrawl-seal" }
basecrawl-fp = { path = "../basecrawl-fp" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
url.workspace = true
reqwest.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
httparse.workspace = true
flate2.workspace = true
brotli.workspace = true
x509-parser.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
thiserror.workspace = true
scraper.workspace = true
ego-tree.workspace = true
base64.workspace = true
encoding_rs.workspace = true
time.workspace = true
quick-xml.workspace = true
pdf-extract.workspace = true
zip.workspace = true

[dev-dependencies]
png.workspace = true
base64.workspace = true
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
sha1 = "0.10"
