[package]
name = "basecrawl-headless-chrome"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = [
    "Alistair Roche <alistair@sunburnt.country>",
    "BaseIntelligence basecrawl contributors",
]
build = "build.rs"
description = "basecrawl fork of headless_chrome 1.0.22 with absolute scrape deadlines, RequestPausedDecision::Deferred, and --headless=new"
homepage = "https://github.com/BaseIntelligence/basecrawl"
readme = "README.md"
license = "MIT"
repository = "https://github.com/BaseIntelligence/basecrawl"
keywords = ["chrome", "chromium", "headless", "cdp", "basecrawl"]
categories = ["web-programming", "api-bindings"]
# Do not autodiscover the upstream standalone integration suite under tests/.
# Those cases assume interactive Chromium fixtures / non-root sandbox environments
# (see mission AGENTS known pre-existing headless_chrome root notes). Hermetic
# CI + publish quality exercise: library unit tests, packaging fork-surface
# regression ([[test]] below), and basecrawl-render/core hard-path suites that
# launch with product --no-sandbox LaunchOptions.
# Manual reruns: `cargo test -p basecrawl-headless-chrome --test <name>`.
autotests = false

# Keep the Rust library name so dependents can `use headless_chrome::...`
# while depending on package `basecrawl-headless-chrome` via Cargo rename.
[lib]
name = "headless_chrome"
path = "src/lib.rs"
# Upstream doctest snippets target an older public API surface and are not part of
# the basecrawl packaging contract (fork surface + product hard-path suites).
doctest = false

[features]
default = ["offline"]
fetch = [
    "ureq",
    "directories",
    "zip",
    "walkdir",
]
native-tls = ["tungstenite/native-tls"]
nightly = []
offline = ["auto_generate_cdp/offline"]
rustls-tls-native-roots = [
    "tungstenite/rustls",
    "tungstenite/rustls-tls-native-roots",
]
rustls-tls-webpki-roots = [
    "tungstenite/rustls",
    "tungstenite/rustls-tls-webpki-roots",
    "rustls",
    "rustls-pemfile",
    "webpki-roots",
    "rustls/ring",
]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
derive_builder = "0.20.2"
directories = { version = "6.0.0", optional = true }
log = "0.4.32"
rand = "0.10.1"
regex = "1.12.4"
rustls = { version = "0.23.40", optional = true, default-features = false, features = ["std", "ring"] }
rustls-pemfile = { version = "2.2.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
tungstenite = "0.29.0"
ureq = { version = "3.3.0", optional = true }
url = "2.5.8"
walkdir = { version = "2.5.0", optional = true }
webpki-roots = { version = "1.0.7", optional = true }
which = "8.0.3"
zip = { version = "8.6.0", optional = true }

[dev-dependencies]
chrono = { version = "0.4.45", features = ["clock"], default-features = false }
env_logger = "0.11.10"
filepath = "0.2.0"
jpeg-decoder = { version = "0.3.2", default-features = false }
png = "0.18.1"
tiny_http = "0.12.0"

[build-dependencies]
auto_generate_cdp = "0.4.6"

[target."cfg(windows)".dependencies]
winreg = "0.56.0"

[[example]]
name = "call_js_function_with_args"
path = "examples/call_js_function_with_args.rs"

[[example]]
name = "local_storage"
path = "examples/local_storage.rs"

[[example]]
name = "print_to_pdf"
path = "examples/print_to_pdf.rs"

[[example]]
name = "query_wikipedia"
path = "examples/query_wikipedia.rs"

[[example]]
name = "settings_and_event"
path = "examples/settings_and_event.rs"

[[example]]
name = "take_screenshot"
path = "examples/take_screenshot.rs"

# Packaging contract only (upstream tests live on disk for manual use).
[[test]]
name = "basecrawl_fork_surface"
path = "tests/basecrawl_fork_surface.rs"
