[package]
name = "basecrawl-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
headless_chrome = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
png = { workspace = true }
