[package]
name = "basecrawl-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
basecrawl-fp = { path = "../basecrawl-fp" }
basecrawl-seal = { path = "../basecrawl-seal" }
headless_chrome = { workspace = true, features = ["rustls-tls-webpki-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
png = { workspace = true }
