[project]
name = "basecrawl-benchmark"
version = "0.1.0"
description = "Common result schema + scorer for basecrawl vs Firecrawl H2H benchmark"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
basecrawl-benchmark = "benchmark.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
